--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -310,6 +310,7 @@
     "Haml",
     "hasattr",
     "hashable",
+    "hasher",
     "heatmap",
     "Hegarty",
     "HEIC",
@@ -403,6 +404,7 @@
     "Katz",
     "kdeplot",
     "keydown",
+    "Kitable",
     "Kitson",
     "Kivy",
     "kornel",
