--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -707,6 +707,7 @@
     "Stmts",
     "storekit",
     "strcoll",
+    "Stringsdict",
     "stripplot",
     "striptags",
     "strlen",
@@ -738,6 +739,7 @@
     "swiftformat",
     "Swiftful",
     "swiftlint",
+    "swiftui",
     "swiftversion",
     "syntaxhighlight",
     "sysconfig",
