--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -434,6 +434,7 @@
     "linewidth",
     "linkify",
     "linspace",
+    "linuxmain",
     "listdir",
     "listitems",
     "listview",
@@ -851,6 +852,7 @@
     "xcassets",
     "xcconfig",
     "xcdatamodeld",
+    "xcodebuild",
     "xcodeproj",
     "xcworkspace",
     "xelatex",
