--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -121,6 +121,7 @@
     "clearfix",
     "clientversions",
     "Clippy",
+    "cloudconvert",
     "cloudkit",
     "clustermap",
     "cmake",
@@ -392,6 +393,7 @@
     "Jira",
     "Joanie",
     "jointplot",
+    "Jordi",
     "jsonify",
     "jstl",
     "Jupyter",
