--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -601,6 +601,7 @@
     "Ramus",
     "randint",
     "rcfile",
+    "rcproject",
     "readdir",
     "readline",
     "readlines",
@@ -804,6 +805,7 @@
     "Udemy",
     "underflows",
     "unfocus",
+    "ungroup",
     "unlinkable",
     "unmark",
     "unobserve",
