--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -262,6 +262,7 @@
     "filterfalse",
     "finditer",
     "findstr",
+    "Florian",
     "Flutterly",
     "fmax",
     "fmin",
@@ -657,6 +658,7 @@
     "Sarno",
     "savefig",
     "scatterplot",
+    "Schweizer",
     "scikit",
     "scipy",
     "scriptable",
