--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -245,6 +245,7 @@
     "facecolor",
     "Failable",
     "fastapi",
+    "Fastfile",
     "fastify",
     "Fastlane",
     "Fastly",
@@ -312,6 +313,7 @@
     "groupby",
     "groupend",
     "Gruber",
+    "Gymfile",
     "Haml",
     "hasattr",
     "hashable",
@@ -691,6 +693,7 @@
     "skyblue",
     "SLAs",
     "smui",
+    "Snapfile",
     "softmax",
     "softo",
     "Sorley",
