--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "appendleft",
     "Appfile",
     "appiconset",
+    "appstore",
     "appstoreconnect",
     "arange",
     "archs",
@@ -277,6 +278,7 @@
     "fontweight",
     "foobarbaz",
     "forceescape",
+    "frameit",
     "freenom",
     "fromtimestamp",
     "frozenset",
@@ -773,6 +775,7 @@
     "taskkill",
     "Taskpane",
     "tensorflow",
+    "testflight",
     "textformfield",
     "textproto",
     "textvariable",
