--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -793,12 +793,14 @@
     "tmdb",
     "Toews",
     "Tokio's",
+    "tonumber",
     "toolchain",
     "Toplevel",
     "topn",
     "Topo",
     "topojson",
     "torchvision",
+    "tostring",
     "trackpad",
     "treeitems",
     "Trello",
