--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -557,6 +557,7 @@
     "Passthrough",
     "pathlib",
     "pathsep",
+    "pcall",
     "peaceiris",
     "pect",
     "Permalinks",
@@ -801,6 +802,7 @@
     "topojson",
     "torchvision",
     "tostring",
+    "traceback",
     "trackpad",
     "treeitems",
     "Trello",
