--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -493,6 +493,7 @@
     "memberwise",
     "memoryview",
     "Menubutton",
+    "metamethods",
     "metatables",
     "meteorapp",
     "methodcaller",
