--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -300,6 +300,7 @@
     "getcwd",
     "getfullargspec",
     "getitem",
+    "getmetatable",
     "getmtime",
     "getsize",
     "getsource",
@@ -493,7 +494,9 @@
     "memberwise",
     "memoryview",
     "Menubutton",
+    "metamethod",
     "metamethods",
+    "metatable",
     "metatables",
     "meteorapp",
     "methodcaller",
@@ -687,6 +690,7 @@
     "setattr",
     "setcookie",
     "setitem",
+    "setmetatable",
     "setrecursionlimit",
     "setstate",
     "Shopify",
