--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
     "asinit",
     "assemblyscript",
     "associatedtype",
+    "Astro",
     "astype",
     "asyncio",
     "attrgetter",
@@ -470,6 +471,7 @@
     "lstrip",
     "ltrim",
     "luac",
+    "luasnip",
     "Luca",
     "Lucet",
     "luwenjiechn",
@@ -547,6 +549,7 @@
     "npmhub",
     "numpy",
     "nums",
+    "Nvim",
     "Octo",
     "Octotree",
     "oldstyle",
