--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -480,6 +480,7 @@
     "macos",
     "mainloop",
     "makedirs",
+    "maplist",
     "markdownlint",
     "markeredgecolor",
     "markerfacecolor",
