--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -238,6 +238,7 @@
     "entryscripts",
     "eprint",
     "eprintln",
+    "errdefer",
     "errorsn",
     "Esposito",
     "exercism",
@@ -561,6 +562,7 @@
     "onclick",
     "onelongword",
     "openweathermap",
+    "orelse",
     "Osmani",
     "Overscroll",
     "padx",
