--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -129,6 +129,7 @@
     "clientversions",
     "Clippy",
     "cloudconvert",
+    "Cloudinary",
     "cloudkit",
     "clpfd",
     "clustermap",
@@ -736,6 +737,7 @@
     "splitn",
     "sportscourt",
     "sprintf",
+    "Squoosh",
     "srcset",
     "SSGs",
     "ssh'ing",
