--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -152,6 +152,7 @@
     "conda",
     "condarc",
     "consts",
+    "Contentful",
     "contextvar",
     "Convertio",
     "convolutional",
@@ -757,6 +758,8 @@
     "stless",
     "Stmts",
     "storekit",
+    "Storyblok",
+    "Strapi",
     "strcoll",
     "strikethrough",
     "Stringsdict",
