--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -288,6 +288,7 @@
     "frameit",
     "freenom",
     "fromtimestamp",
+    "frontmatter",
     "frozenset",
     "fsum",
     "Fuhr",
@@ -297,6 +298,7 @@
     "funcref",
     "functools",
     "fxdc",
+    "Gannon",
     "gapminder",
     "genfromtxt",
     "geojson",
